# copyright_notice_precommit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  pytest.ini  setup.cfg
.codestyle/: .bandit  .mypy.ini  .typos.toml
scripts/: copyright_notice.py  error.py  util.py
tests/: conftest.py  requirements.txt
tests/fixtures/: notice.txt  sample_notices.py  sample_paths.py  sample_source_files.py
tests/functional/: test_notice_detection.py
tests/interface/: test_cmdline.py
tests/unit/: test_copyright_notice_checker.py
