[metadata]
name = copyright_notice_precommit
version = 0.1.1
description = pre-commit hook to verify the presence of a copyright notice
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leoll2/copyright_notice_precommit
author = Leonardo Lai
author_email = leonardo.lai@live.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    .codestyle
    test*

[options.entry_points]
console_scripts =
    copyright-notice = scripts.copyright_notice:main

[bdist_wheel]
universal = True
